# errai

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/derive/: Cargo.toml  README.md
crates/derive/src/: frame.rs  lib.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: error.rs  lib.rs  macros.rs  unsync.rs  utils.rs
crates/parser/src/content/: content.rs  mod.rs
crates/parser/src/content/frames/: aenc.rs  apic.rs  atxt.rs  chap.rs  comm.rs  comr.rs  ctoc.rs  encr.rs  equa.rs  etco.rs  geob.rs  grid.rs  ipls.rs  link.rs  mcdi.rs  mllt.rs  mod.rs  owne.rs  pcnt.rs  popm.rs  poss.rs  priv.rs  rbuf.rs  rva2.rs  rvad.rs  rvrb.rs  sylt.rs  sytc.rs  text.rs  txxx.rs  ufid.rs  unkn.rs  user.rs  uslt.rs  wurl.rs  wxxx.rs
crates/parser/src/decode/: date.rs  decoder.rs  encoding.rs  language.rs  macros.rs  mod.rs  timestamp.rs
crates/parser/src/frame/: any.rs  mod.rs  v22.rs  v23.rs  v24.rs
crates/parser/src/id3v2/: extend.rs  header.rs  iter.rs  mod.rs  tag.rs
crates/parser/src/traits/: into.rs  mod.rs  read.rs
crates/parser/src/types/: bytes.rs  frame.rs  mod.rs  slice.rs  version.rs
crates/parser/tests/: header.rs  unsync.rs
docs/: DESIGN.md
errai-benches/: Cargo.toml
errai-benches/benches/: local_ref.rs
src/: consts.rs  lib.rs  loom.rs
src/bifs/: dictionary.rs  flags.rs  info.rs  link.rs  mailbox.rs  mod.rs  monitor.rs  name.rs  spawn.rs  timer.rs
src/core/: mod.rs
src/core/error/: macros.rs  mod.rs
src/core/state/: mod.rs  process_data.rs  process_dict.rs  process_link.rs  signal_queue.rs
src/core/table/: atom_table.rs  mod.rs  proc_table.rs
src/core/table/proc_table/: mod.rs  table.rs
src/core/table/proc_table/error/: access.rs  insert.rs  mod.rs
src/core/table/proc_table/state/: mod.rs  readonly.rs  volatile.rs
src/core/table/proc_table/utils/: index.rs  mod.rs  params.rs  permit.rs  slots.rs
src/core/types/: atom.rs  exit.rs  item.rs  mod.rs  term.rs
src/core/types/dest/: external.rs  internal.rs  local.rs  mod.rs
src/core/types/pids/: external.rs  internal.rs  local.rs  mod.rs  traits.rs
src/core/types/refs/: alias.rs  external.rs  internal.rs  local.rs  mod.rs
src/core/utils/: mod.rs
src/core/utils/futures/: catch_unwind.rs  mod.rs
src/error/: exception.rs  exception_class.rs  exception_group.rs  mod.rs
src/erts/: message.rs  mod.rs  process.rs  runtime.rs  signal.rs  spawn.rs  system.rs
src/erts/mailbox/: channel.rs  message.rs  mod.rs  queue.rs  signal.rs
src/erts/message/: base.rs  down.rs  exit.rs  mod.rs
src/erts/process/: mod.rs  process_data.rs  process_dict.rs  process_id.rs  process_info.rs  process_table.rs
src/erts/runtime/: mod.rs
src/erts/runtime/table/: mod.rs
src/erts/spawn/: config.rs  handle.rs  mod.rs
src/erts/table/: atom_table.rs  mod.rs  proc_table.rs
src/init/: kernel.rs  mod.rs  shutdown.rs
src/init/server/: app_supervisor.rs  mod.rs  signal_handler.rs
src/lang/: mod.rs
src/lang/core/: atom.rs  exit.rs  item.rs  mod.rs  term.rs
src/lang/dest/: external.rs  internal.rs  mod.rs
src/lang/exit/: mod.rs  reason.rs
src/lang/pids/: dyn_pid.rs  ext_pid.rs  external.rs  int_pid.rs  internal.rs  mod.rs  raw_pid.rs  traits.rs
src/lang/refs/: dyn_ref.rs  ext_ref.rs  external.rs  int_ref.rs  mod.rs  raw_ref.rs
src/node/: local.rs  mod.rs
src/proc/: mod.rs  proc_data.rs  proc_dict.rs  proc_link.rs  proc_task.rs  sig_queue.rs  task_guard.rs
src/tyre/: mod.rs
src/tyre/num/: atomic_nz.rs  mod.rs
src/tyre/ptr/: atomic.rs  mod.rs  tagged.rs
src/utils/: hash.rs  measure.rs  mod.rs  thread.rs  time.rs
src/utils/futures/: catch_unwind.rs  mod.rs
tests/: loom.rs
tests/loom/: atomic_nz.rs  proc_table.rs
