[package]
name = "errai"
version = "0.1.0"
authors = ["l1h3r <5410284+l1h3r@users.noreply.github.com>"]
categories = []
description = ""
documentation = "https://docs.rs/errai"
edition = "2024"
homepage = "https://github.com/l1h3r/errai"
keywords = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/l1h3r/errai"
rust-version = "1.92"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = [
  "--generate-link-to-definition",
  "--generate-macro-expansion",
  "--extern-html-root-url=core=https://doc.rust-lang.org",
  "--extern-html-root-url=alloc=https://doc.rust-lang.org",
  "--extern-html-root-url=std=https://doc.rust-lang.org",
]

[dependencies]
bitflags = { version = "2.10", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false }
dyn-clone = { version = "1.0", default-features = false }
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher", "inline-more", "raw-entry"] }
parking_lot = { version = "0.12", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
tokio = { version = "1.49", default-features = false, features = ["macros", "net", "parking_lot", "rt-multi-thread", "sync", "time"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt", "std"] }
triomphe = { version = "0.1", default-features = false }

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(loom)"] }
