[package]
name = "parser"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bitflags = { version = "2.6", default-features = false }
byteorder = { version = "1.5", default-features = false, features = ["std"] }
derive = { version = "=0.1", path = "../derive" }
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"], optional = true }
memchr = { version = "2.7", default-features = false, features = ["std"] }

[features]
default = ["zlib"]

# Enables ZLIB decompression.
zlib = ["dep:flate2"]
